fixed stray bannerWrap undefined in code

--- a/code/styles/css/annual-report-2021.css
+++ b/code/styles/css/annual-report-2021.css
@@ -270,7 +270,7 @@ FEATURED STORIES **********************************
 /*body {
   background-image: url(https://www.weber.edu/wsuimages/annualreport/2021/images/ar-home-header2.jpg) !important;
   background-size: cover;
-  height: 100vh;
+  //height: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-x: 40%;
